--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
     buids:
-        runs-on: ubunto-latest
+        runs-on: ubuntu-latest
         steps:
             - name: "Mostrar mensaje"
               run: echo hola mundo
