--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Setup python
-              uses: actions/setup-pyhon@v5
+              uses: actions/setup-python@v5
               with:
                   python-version: '3.11'
             - name: Run script
